--- a/index.html
+++ b/index.html
@@ -1,94 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Happy Birthday</title>
+  <meta charset="UTF-8">
+  <title>Your Cake</title>
   <style>
-    * { box-sizing: border-box; margin:0; padding:0; }
+    * { box-sizing:border-box; margin:0; padding:0; }
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       background: #ffd6e8;
-      display:flex; flex-direction:column; align-items:center; justify-content:center;
+      display:flex; align-items:center; justify-content:center;
       min-height:100vh;
+      overflow:hidden;
     }
-    .card {
-      background: #fff;
-      border-radius: 24px;
-      padding: 32px 26px 40px;
-      max-width: 420px;
-      width: 90%;
-      text-align: center;
-      box-shadow: 0 18px 40px rgba(0,0,0,0.12);
-    }
-    .headline { font-size:1.9rem; font-weight:800; color:#ff3b7f; margin-bottom:10px; }
-    .headline span { color:#ff6fa6; }
-    .emoji-line { font-size:1.4rem; margin-bottom:18px; }
-    .body-text { font-size:0.98rem; line-height:1.6; color:#555; margin-bottom:26px; }
-    .cta-pill {
-      display:inline-flex; align-items:center; justify-content:center;
-      padding:12px 26px; border-radius:999px; background: linear-gradient(135deg,#ff3b7f,#ff9ad5);
-      color:#fff; font-weight:700; font-size:0.98rem; cursor:pointer;
-    }
-    .cta-pill:hover { transform:translateY(-2px); box-shadow:0 12px 24px rgba(255,60,133,0.5); }
 
-    /* Cake container (hidden initially) */
     .cake-container {
-      margin-top:30px;
       text-align:center;
-      opacity:0;
-      transition: opacity 1s ease;
+      animation: fadeIn 1s forwards;
     }
-    .cake-container.show { opacity:1; }
+
+    @keyframes fadeIn {
+      from { opacity:0; transform: scale(0.8); }
+      to { opacity:1; transform: scale(1); }
+    }
 
     .cake-base {
-      font-size:5rem;
+      font-size: 10rem; /* bigger cake */
       display:flex; justify-content:center; align-items:flex-end;
       position:relative;
     }
-    .candle { font-size:1.5rem; margin:0 0.15rem; position:relative; }
+
+    .candle { font-size:3rem; margin:0 0.25rem; position:relative; }
     .flame {
-      position:absolute; top:-1.2rem; left:50%;
+      position:absolute; top:-2rem; left:50%;
       transform:translateX(-50%);
-      font-size:1rem;
+      font-size:2rem;
       animation: flicker 0.3s infinite alternate;
     }
+
     @keyframes flicker {
       0% { transform: translateX(-50%) translateY(0) scale(1); opacity:1; }
-      50% { transform: translateX(-50%) translateY(-2px) scale(1.1); opacity:0.8; }
+      50% { transform: translateX(-50%) translateY(-5px) scale(1.1); opacity:0.8; }
       100% { transform: translateX(-50%) translateY(0) scale(1); opacity:1; }
     }
+
+    .cake-emoji { font-size: 15rem; margin-top: 20px; }
   </style>
 </head>
 <body>
-  <div class="card">
-    <div class="headline">
-      Happy Birthday, <span>Beautiful!</span>
-    </div>
-    <div class="emoji-line">🎉✨</div>
-    <div class="body-text">
-      Today is all about celebrating the most amazing person in my world.
-      Click the button below to see your special birthday cake!
-    </div>
-    <div class="cta-pill" onclick="showCake()">Let's Go</div>
-  </div>
-
-  <!-- Cake hidden initially -->
-  <div class="cake-container" id="cake">
+  <div class="cake-container">
     <div class="cake-base">
       <div class="candle">🕯<span class="flame">🔥</span></div>
       <div class="candle">🕯<span class="flame">🔥</span></div>
       <div class="candle">🕯<span class="flame">🔥</span></div>
     </div>
-    <div style="font-size:5rem;">🎂</div>
+    <div class="cake-emoji">🎂</div>
   </div>
-
-  <script>
-    function showCake() {
-      document.getElementById('cake').classList.add('show');
-      // Scroll to cake after showing it
-      document.getElementById('cake').scrollIntoView({ behavior: 'smooth' });
-    }
-  </script>
 </body>
 </html>
-
